Tue Aug 17 18:33:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/executor_ami_exs.cpp:
          Instead of calling delete on the ami4ccm facet, release it

Tue Aug 17 10:56:02 UTC 2010  Olli Savia  <ops@iki.fi>

        * tao/AnyTypeCode/TypeCode.inl:
        * tao/Object.h:
        * tao/Object.inl:
          Modified template specializations to work with older GCCs.

Tue Aug 17 08:49:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/idltocpp0x/IDLC++0xRFP.odt:
          First initial commit, much more has to be done to get this draft RFP
          ready

        * tao/IIOP_Connector.cpp:
        * tests/TransportCurrent/IIOP/IIOP_Tester.cpp:
          Layout changes

        * tests/POA/On_Demand_Activation/Servant_Activator.cpp:
          Boolean now maps to bool

        * tests/TransportCurrent/IIOP/run_test.pl:
          Removed obsolete helper method

Mon Aug 16 09:09:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/executor_ami_exs.cpp:
          Generate missing _duplicate call

Fri Aug 13 13:48:03 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/makefile.am:

          Updated with new file in TAO_IFR_BE.

Wed Aug 11 20:49:43 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/tao.mpc:

          install orb.idl.

Tue Aug 10 17:46:16 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_init.cpp(fe_populate_global_scope):

          Put "omg.org" on the pragma prefix stack temporarily
          so it will be applied when creating CORBA module
          and its contents.

Tue Aug 10 12:24:31 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/included.idl:

          Cosmetic changes.

Mon Aug  9 17:06:41 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_redef.cpp:
        * TAO_IDL/Makefile.am:
